# openarm_mp_labs

./: .gitignore  README.md  pyproject.toml  to-do.md
assets/ginger/: ginger.xml
assets/ginger/meshes/: collision.stl
assets/grasps/: ginger_grasps.yml
docker/: Dockerfile  README.md
docs/: legacy_docs_README.md  new_object_pick_place.md  pick_and_place_mujoco_plan.md  pick_and_place_plan.md
scripts/pick_place/: README.md
src/openarm_mp_labs/: __init__.py  config.py  demo_pick_place.py  grasp_io.py  kinematics_utils.py  scene_builder.py  simulation.py  trajectory.py
